# Inracker

./: .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.storybook/: preview.tsx
docs/: GEMINI.md  assistant-guide.md
src/: App.tsx  i18next.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/constants/: player.ts
src/hooks/: useAppUpdates.ts  useAppUpdates.tsx  useAudioFiles.ts  useCanvasReducer.ts  useChapters.ts  useCombat.ts  useCreateEncounter.ts  useCreateNPC.ts  useCreateOpponent.ts  useCreatePlayer.ts  useEditNPC.ts  useEditOpponent.ts  useEditPlayer.ts  useEffects.ts  useEncounterNPCs.ts  useEncounterOpponents.ts  useEncounters.ts  useImages.ts  useImmunities.ts  useLogs.ts  useMarkup.ts  useMutationWithErrorToast.ts  useNPCs.ts  useOpponents.ts  useParties.ts  usePartyStore.ts  usePartysStore.ts  usePlayers.ts  useQueryWithErrorToast.ts  useResistances.ts  useRests.ts  useSettingsBackup.ts  useSettingsGeneral.ts  useTokens.ts  useWeaknesses.ts
src/lib/: colors.ts  database.ts  time.ts  utils.ts
src/mocks/: db.ts
src/routes/: __root.tsx  chapters.$chapterId.tsx  index.lazy.tsx  parties.tsx  partySelection.lazy.tsx
src/schemas/: createEncounter.ts  createOpponent.ts  createPlayer.ts  editNPC.ts  editOpponent.ts  editPlayer.ts  settingsGeneral.ts
(+479 files in other folders)
