[package]
name = "inracker"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "inracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
